--- a/.github/workflows/deploy-prod-website.yml
+++ b/.github/workflows/deploy-prod-website.yml
@@ -1,7 +1,8 @@
 name: Set the production branch to current commit to trigger prod website deployment
 
 on:
-  workflow_dispatch:
+#  workflow_dispatch:
+  pull_request:
 
 jobs:
   set-prod-branch:
