--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.14.0",
+    "@mui/x-data-grid": "^6.19.6",
     "@mui/x-date-pickers": "^6.10.2",
     "@react-pdf/renderer": "^3.1.12",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
