--- a/.github/workflows/deploy-prod-database.yml
+++ b/.github/workflows/deploy-prod-database.yml
@@ -10,8 +10,8 @@ env:
   SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_PROD_ACCESS_TOKEN }}
 
 jobs:
-  deploy-prod-database:
-    name: Deploy prod database
+  dry-deploy-prod-database:
+    name: Dry-run deployment to prod database
     environment: prod
     runs-on: ubuntu-latest
     steps:
@@ -22,6 +22,17 @@ jobs:
         run: npx supabase link --project-ref $SUPABASE_PROD_PROJECT_ID
       - name: Dry run the migration
         run: npx supabase db push --dry-run
+
+  deploy-prod-database:
+    name: Deploy prod database
+    environment: prod
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+
+      - name: Link to the project
+        run: npx supabase link --project-ref $SUPABASE_PROD_PROJECT_ID
       - name: Apply the migration
         run: npx supabase db push
 
