--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -5,8 +5,8 @@ on:
       - .github/**
   push:
     branches:
-      dev
-      main
+      - dev
+      - main
 jobs:
   lint:
     name: Check linting
@@ -30,6 +30,10 @@ jobs:
     env:
       NEXT_PUBLIC_SUPABASE_URL: http://127.0.0.1:54321
       NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{secrets.SUPABASE_LOCAL_ANON_KEY}}
+      AWS_CLOUDWATCH_LOG_GROUP: ${{secrets.AWS_CLOUDWATCH_LOG_GROUP}}
+      AWS_CLOUD_WATCH_LOG_STREAM: ${{secrets.AWS_CLOUD_WATCH_LOG_STREAM}}
+      AWS_CLOUDWATCH_ACCESS_KEY: ${{secrets.AWS_CLOUDWATCH_ACCESS_KEY}}
+      AWS_CLOUDWATCH_SECRET_ACCESS_KEY: ${{secrets.AWS_CLOUDWATCH_SECRET_ACCESS_KEY}}
     steps:
       - name: Checkout this repo
         uses: actions/checkout@v4
@@ -71,6 +75,10 @@ jobs:
       NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{secrets.SUPABASE_LOCAL_ANON_KEY}}
       NEXT_PUBLIC_CYPRESS_TEST_USER: admin@example.com
       NEXT_PUBLIC_CYPRESS_TEST_PASS: admin123
+      AWS_CLOUDWATCH_LOG_GROUP: ${{secrets.AWS_CLOUDWATCH_LOG_GROUP}}
+      AWS_CLOUD_WATCH_LOG_STREAM: ${{secrets.AWS_CLOUD_WATCH_LOG_STREAM}}
+      AWS_CLOUDWATCH_ACCESS_KEY: ${{secrets.AWS_CLOUDWATCH_ACCESS_KEY}}
+      AWS_CLOUDWATCH_SECRET_ACCESS_KEY: ${{secrets.AWS_CLOUDWATCH_SECRET_ACCESS_KEY}}
     steps:
       - name: Checkout this repo
         uses: actions/checkout@v4
