--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/react-fontawesome": "^1.6.5",
     "@types/react-modal": "^3.16.0",
     "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "axe-core": "^4.7.2",
@@ -95,6 +96,7 @@
     "styled-components": "^6.0.4",
     "supabase": "^1.142.2",
     "typescript": "^5.2.2",
+    "uuid": "^9.0.1",
     "winston": "^3.12.0",
     "winston-cloudwatch": "^6.2.0"
   },
