--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,4 +1,4 @@
-name: Bug Report 2
+name: Bug Report
 description: File a bug report
 labels: ["bug"]
 assignees:
@@ -7,7 +7,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report!
+        # Thanks for taking the time to fill out this bug report!
   - type: textarea
     id: repro-steps
     validations:
