--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "styled-components": "^6.0.4",
     "supabase": "^1.142.2",
     "typescript": "^5.2.2",
+    "uuid": "^9.0.1",
     "winston": "^3.12.0",
     "winston-cloudwatch": "^6.2.0"
   },
@@ -102,6 +103,7 @@
     "@snaplet/copycat": "^5.0.0",
     "@snaplet/seed": "^0.88.2",
     "@types/seedrandom": "^3.0.8",
+    "@types/uuid": "^9.0.8",
     "seedrandom": "^3.0.5",
     "snaplet": "^0.88.2"
   }
