--- a/.github/workflows/deploy-dry-prod-database.yml
+++ b/.github/workflows/deploy-dry-prod-database.yml
@@ -1,4 +1,4 @@
-name: Deploy prod database
+name: Dry-run deployment to prod database
 on:
   push:
     branches:
@@ -10,8 +10,8 @@ env:
   SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_PROD_ACCESS_TOKEN }}
 
 jobs:
-  deploy-prod-database:
-    name: Deploy prod database
+  dry-deploy-prod-database:
+    name: Dry-run deployment to prod database
     environment: prod
     runs-on: ubuntu-latest
     steps:
@@ -20,5 +20,5 @@ jobs:
 
       - name: Link to the project
         run: npx supabase link --project-ref $SUPABASE_PROD_PROJECT_ID
-      - name: Apply the migration
-        run: npx supabase db push
+      - name: Dry run the migration
+        run: npx supabase db push --dry-run
