--- a/.github/workflows/reset-dev-database.yml
+++ b/.github/workflows/reset-dev-database.yml
@@ -1,11 +1,6 @@
-name: Deploy dev database
+name: Reset dev database
 on:
   workflow_dispatch:
-  push:
-    paths:
-      - supabase/migrations/**.sql
-    branches:
-      - dev
 
 env:
   SUPABASE_DEV_PROJECT_ID: ${{ secrets.SUPABASE_DEV_PROJECT_ID }}
@@ -13,8 +8,8 @@ env:
   SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_DEV_ACCESS_TOKEN }}
 
 jobs:
-  deploy-dev-database:
-    name: Deploy dev database
+  reset-dev-database-data:
+    name: Reset data in dev database
     environment: dev
     runs-on: ubuntu-latest
     steps:
@@ -23,7 +18,5 @@ jobs:
 
       - name: Link to the project
         run: npx supabase link --project-ref $SUPABASE_DEV_PROJECT_ID
-      - name: Dry run the migration
-        run: npx supabase db push --dry-run
-      - name: Apply the migration
-        run: npx supabase db push
+      - name: Reset data in database
+        run: npx supabase db reset --linked
