NONE: Add include-all flag when deploying database

--- a/.github/workflows/deploy-dev-database.yml
+++ b/.github/workflows/deploy-dev-database.yml
@@ -24,6 +24,6 @@ jobs:
       - name: Link to the project
         run: npx supabase link --project-ref $SUPABASE_DEV_PROJECT_ID
       - name: Dry run the migration
-        run: npx supabase db push --dry-run
+        run: npx supabase db push --dry-run --include-all
       - name: Apply the migration
-        run: npx supabase db push
+        run: npx supabase db push --include-all
