--- a/.github/workflows/deploy-dry-prod-database.yml
+++ b/.github/workflows/deploy-dry-prod-database.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Link to the project
         run: npx supabase link --project-ref $SUPABASE_PROD_PROJECT_ID
       - name: Dry run the migration
-        run: npx supabase db push --dry-run
+        run: npx supabase db push --dry-run --include-all
