--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "file-saver": "^2.0.5",
     "next": "^13.4.19",
     "nyc": "^15.1.0",
     "pdf-parse": "^1.1.1",
@@ -103,6 +104,7 @@
   "devDependencies": {
     "@snaplet/copycat": "^5.0.0",
     "@snaplet/seed": "^0.88.2",
+    "@types/file-saver": "^2.0.7",
     "@types/seedrandom": "^3.0.8",
     "@types/uuid": "^9.0.8",
     "seedrandom": "^3.0.5",
