NONE: Fix test:e2e command

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "open:cypress": "start-server-and-test 'next start -p 3100' http://localhost:3100 'npx cypress open --config baseUrl=http://localhost:3100'",
     "test": "start-server-and-test test:runner_server_release http://localhost:3200 test:runner",
     "test:component": "start-server-and-test test:runner_server_release http://localhost:3200 test:runner_component",
-    "test:e2e": "start-server-and-test test:runner_server_release http://localhost:3200 \"npm run test:runner_e2e -- --spec '${npm_config_spec}'\"",
+    "test:e2e": "start-server-and-test test:runner_server_release http://localhost:3200 test:runner_e2e",
     "test:coverage": "npm run coverage:generate && npm run coverage:run_tests && npm run coverage:report",
     "test:runner": "npm run test:runner_component && npm run test:runner_e2e",
     "test:runner_component": "npx cypress run --component",
