--- a/.snaplet/config.json
+++ b/.snaplet/config.json
@@ -1,4 +1,3 @@
 {
-  "targetDatabaseUrl": "postgresql://postgres:postgres@localhost:54322/postgres",
-  "projectId": "clsw8o2l40moelyuqoqcjbusl"
+  "targetDatabaseUrl": "postgresql://postgres:postgres@localhost:54322/postgres"
 }
