--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,16 +12,11 @@
     "plugin:prettier/recommended",
     "plugin:cypress/recommended",
     "plugin:import/recommended",
-    "plugin:import/typescript"
+    "plugin:import/typescript",
+    "prettier"
   ],
   "rules": {
-    "indent": ["error", 4, {
-      "SwitchCase": 1
-    }],
-    "linebreak-style": ["error", "unix"],
     "quotes": ["error", "double"],
-    "semi": ["error", "always"],
-    "eol-last": ["error", "always"],
     "prefer-const": "error",
     "@typescript-eslint/explicit-function-return-type": ["error", {
       "allowExpressions": true
