--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "db:local:generate_types": "supabase gen types typescript --local --schema public > src/databaseTypesFile.ts",
     "db:remote:generate_types": "supabase gen types typescript --schema public > src/databaseTypesFile.ts",
     "db:generate_seed": "npx tsx supabase/seed/seed.mts > supabase/seed.sql",
-    "post_checkout": "npm run dev:reset_supabase && npx snaplet generate"
+    "post_checkout": "npm install && npx supabase stop && npx supabase start && npm run dev:reset_supabase && npx snaplet generate"
   },
   "nyc": {
     "all": true,
