--- a/.github/workflows/dump-prod-database.yml
+++ b/.github/workflows/dump-prod-database.yml
@@ -1,17 +1,17 @@
-name: Dump dev database every hour
+name: Dump prod database every hour
 
 on:
   schedule:
     - cron: '0 * * * *' # Runs every hour
 
 env:
-  SUPABASE_DEV_PROJECT_ID: ${{ secrets.SUPABASE_DEV_PROJECT_ID }}
-  SUPABASE_DB_PASSWORD: ${{ secrets.SUPABASE_DEV_DATABASE_PASSWORD }}
-  SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_DEV_ACCESS_TOKEN }}
+  SUPABASE_PROD_PROJECT_ID: ${{ secrets.SUPABASE_PROD_PROJECT_ID }}
+  SUPABASE_DB_PASSWORD: ${{ secrets.SUPABASE_PROD_DATABASE_PASSWORD }}
+  SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_PROD_ACCESS_TOKEN }}
 
 jobs:
-  dump-dev-database:
-    name: Dump dev database
+  dump-prod-database:
+    name: Dump prod database
     runs-on: ubuntu-latest
 
     steps:
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Link to the project
-        run: npx supabase link --project-ref $SUPABASE_DEV_PROJECT_ID
+        run: npx supabase link --project-ref $SUPABASE_PROD_PROJECT_ID
 
       - name: Create db-backup folder
         run: mkdir db-backup
