--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,7 @@
     "react/react-in-jsx-scope": "off",
     "curly": "error",
     "react/jsx-curly-brace-presence": "error",
-    "id-length": "error",
+    "id-length": ["error", {"exceptions":  ["_"]}],
     "import/no-named-as-default": "off",
     "import/no-self-import": "warn",
     // to deal with false positives in type annotations, turn on typescript-specific rules
