--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,6 +1,2 @@
-# To ensure that code isn't merged until I've reviewed it :)
-*   @stonelink
-*   @TomCusack-Softwire
-*   @rickaw
-*   @8kristy
-
+# See https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners
+*   @rickaw @8kristy
