VFB-NONE: Delete Kristina from CODEOWNERS

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # See https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners
-*   @8kristy @Stuart-Knowles-SW @stonelink
+*   @Stuart-Knowles-SW @stonelink
