--- a/package.json
+++ b/package.json
@@ -6,34 +6,38 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --dir . --ignore-path .gitignore && npm run check_types",
-    "lint_fix": "next lint --fix --dir . --ignore-path .gitignore && npm run check_types",
-    "check_types": "tsc && echo 'No typescript errors!'",
-    "open:cypress": "start-server-and-test 'next start -p 3100' http://localhost:3100 'npx cypress open --config baseUrl=http://localhost:3100'",
-    "test": "start-server-and-test test:runner_server_release http://localhost:3200 test:runner",
-    "test:component": "start-server-and-test test:runner_server_release http://localhost:3200 test:runner_component",
-    "test:e2e": "start-server-and-test test:runner_server_release http://localhost:3200 test:runner_e2e",
-    "test:coverage": "npm run coverage:generate && npm run coverage:run_tests && npm run coverage:report",
-    "test:runner": "npm run test:runner_component && npm run test:runner_e2e",
-    "test:runner_component": "npx cypress run --component",
-    "test:runner_e2e": "npx cypress run",
-    "test:runner_server_dev": "next dev -p 3200",
-    "test:runner_server_release": "next start -p 3200",
+    "start:test_server": "next start -p 3200",
+
+    "lint": "npm run typecheck && next lint --dir . --ignore-path .gitignore",
+    "lint_fix": "npm run typecheck && next lint --fix --dir . --ignore-path .gitignore",
+    "typecheck": "tsc --noEmit",
+
+    "test": "start-server-and-test start:test_server 3200 cypress:all",
+    "test:component": "start-server-and-test start:test_server 3200 cypress:component",
+    "test:e2e": "start-server-and-test start:test_server 3200 cypress:e2e",
+    "test:coverage": "npm run coverage:generate && npm run coverage:run_tests || npm run coverage:report",
+
+    "cypress:all": "npm run cypress:component && npm run cypress:e2e",
+    "cypress:component": "npx cypress run --component",
+    "cypress:e2e": "npx cypress run --e2e",
+    "cypress:open": "start-server-and-test 'next start -p 3100' 3100 'npx cypress open --config baseUrl=http://localhost:3100'",
+
     "coverage:generate": "nyc instrument --delete src .nyc_output --compact=false --all",
-    "coverage:run_tests": "start-server-and-test coverage:server http://localhost:3200 test:runner",
-    "coverage:server": "nyc npm run test:runner_server_dev",
-    "coverage:report": "nyc report --reporter html && nyc report --reporter text-summary",
-    "dev:create_user_for_each_role": "tsc supabase/tools/createUserForEachRole.ts && node supabase/tools/createUserForEachRole.js",
-    "dev:create_bucket": "tsc supabase/tools/createStorage.ts && node supabase/tools/createStorage.js",
-    "dev:reset_supabase": "supabase db reset && npm run dev:create_user_for_each_role && npm run dev:create_bucket",
-    "db:local:generate_types": "supabase gen types typescript --local --schema public > src/databaseTypesFile.ts",
-    "db:remote:generate_types": "supabase gen types typescript --schema public > src/databaseTypesFile.ts",
+    "coverage:run_tests": "start-server-and-test 'nyc npm run start:test_server' 3200 cypress:e2e",
+    "coverage:report": "nyc report --reporter text && nyc report --reporter text-summary",
+
+    "reset_supabase": "supabase db reset && ts-node supabase/tools/createUserForEachRole.ts && ts-node supabase/tools/createStorage.ts",
+    "generate_types:local": "supabase gen types typescript --local --schema public > src/databaseTypesFile.ts",
+    "generate_types:remote": "supabase gen types typescript --schema public > src/databaseTypesFile.ts",
     "db:generate_seed": "npx tsx supabase/seed/seed.mts > supabase/seed.sql",
     "post_checkout": "npm install && npx supabase stop && npx supabase start && npm run dev:reset_supabase && npx snaplet generate"
   },
   "nyc": {
     "all": true,
-    "extends": "@istanbuljs/nyc-config-typescript"
+    "extends": "@istanbuljs/nyc-config-typescript",
+    "include": ["src/**/*.ts", "src/**/*.tsx"],
+    "exclude": ["src/**/*.cy.ts", "src/**/*.cy.tsx"],
+    "extension": [".ts",".tsx"]
   },
   "dependencies": {
     "@emotion/is-prop-valid": "^1.2.1",
@@ -84,10 +88,19 @@
     "winston-cloudwatch": "^6.2.0"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.11.0",
+    "@snaplet/copycat": "^5.0.0",
+    "@snaplet/seed": "^0.88.2",
+    "@types/cypress__code-coverage": "^3.10.0",
+    "@types/cypress-dotenv": "^2.0.1",
+    "@types/file-saver": "^2.0.7",
+    "@types/seedrandom": "^3.0.8",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "axe-core": "^4.7.2",
     "cypress": "^13.1.0",
     "cypress-axe": "^1.5.0",
-    "@cypress/code-coverage": "^3.11.0",
     "eslint": "^8.43.0",
     "eslint-config-next": "^13.4.6",
     "eslint-config-prettier": "^8.8.0",
@@ -98,16 +111,8 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "@snaplet/copycat": "^5.0.0",
-    "@types/cypress__code-coverage": "^3.10.0",
-    "@types/cypress-dotenv": "^2.0.1",
-    "@types/file-saver": "^2.0.7",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "@snaplet/seed": "^0.88.2",
-    "@types/seedrandom": "^3.0.8",
-    "@types/uuid": "^9.0.8",
     "seedrandom": "^3.0.5",
-    "snaplet": "^0.88.2"
+    "snaplet": "^0.88.2",
+    "ts-node": "^10.9.2"
   }
 }
