--- a/amplify.yml
+++ b/amplify.yml
@@ -3,7 +3,7 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm ci
+        - npm ci --omit dev
     build:
       commands:
         - env | grep -e CLOUDWATCH_ >> .env.production
